--- a/sols/5/Makefile
+++ b/sols/5/Makefile
@@ -9,7 +9,7 @@ LEXDEBUG =
 # -t, together with defining YYDEBUG, makes bison write messages
 YACCDEBUG = -vtd
 
-OBJS = main.o parse.tab.o lex.yy.o ast.o symbolTable.o poolOfNodes.o
+OBJS = main.o parse.tab.o lex.yy.o ast.o symbolTable.o poolOfNodes.o tableManager.o
 
 run: $(OBJS)
 	$(CCC) $(CFLAGS) -o run $(OBJS)
@@ -17,20 +17,23 @@ run: $(OBJS)
 main.o: main.cpp
 	$(CCC) $(CFLAGS) -c main.cpp
 
-parse.tab.c: includes/parse.y
-	$(YACC) $(YACCDEBUG) includes/parse.y
+parse.tab.c: parse.y
+	$(YACC) $(YACCDEBUG) parse.y
 
 parse.tab.o: parse.tab.c
 	$(CCC) $(CFLAGS) -c parse.tab.c
 
-lex.yy.c: includes/scan.l parse.tab.o
-	$(LEX) $(LEXDEBUG) includes/scan.l
+lex.yy.c: scan.l parse.tab.o
+	$(LEX) $(LEXDEBUG) scan.l
 
 lex.yy.o: lex.yy.c
 	$(CCC) $(CFLAGS) $(LEXFLAGS) -c lex.yy.c
 
 ast.o: includes/ast.cpp includes/ast.h includes/literal.h
 	$(CCC) $(CFLAGS) -c includes/ast.cpp
+
+tableManager.o: includes/tableManager.cpp includes/tableManager.h
+	$(CCC) $(CFLAGS) -c includes/tableManager.cpp
 
 symbolTable.o: includes/symbolTable.cpp includes/symbolTable.h
 	$(CCC) $(CFLAGS) -c includes/symbolTable.cpp
@@ -42,3 +45,4 @@ poolOfNodes.o: includes/poolOfNodes.cpp includes/poolOfNodes.h \
 clean:
 	rm -f run *.o parse.tab.c lex.yy.c
 	rm -f parse.tab.h parse.output
+
