--- a/sols/52/Makefile
+++ b/sols/52/Makefile
@@ -9,7 +9,7 @@ LEXDEBUG =
 # -t, together with defining YYDEBUG, makes bison write messages
 YACCDEBUG = -vtd
 
-OBJS = main.o parse.tab.o lex.yy.o ast.o symbolTable.o poolOfNodes.o #Manager.o
+OBJS = main.o parse.tab.o lex.yy.o ast.o symbolTable.o poolOfNodes.o Manager.o
 
 run: $(OBJS)
 	$(CCC) $(CFLAGS) -o run $(OBJS)
@@ -32,8 +32,8 @@ lex.yy.o: lex.yy.c
 ast.o: includes/ast.cpp includes/ast.h includes/literal.h 
 	$(CCC) $(CFLAGS) -c includes/ast.cpp
 
-#Manager.o: includes/Manager.cpp includes/tableManager.h 
-#	$(CCC) $(CFLAGS) -c includes/Manager.cpp
+Manager.o: includes/Manager.cpp includes/tableManager.h 
+	$(CCC) $(CFLAGS) -c includes/Manager.cpp
 
 symbolTable.o: includes/symbolTable.cpp includes/symbolTable.h
 	$(CCC) $(CFLAGS) -c includes/symbolTable.cpp
